--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "lint": "eslint .",
-    "test:api": "npx cypress run --spec \"cypress/e2e/\" --headless"
+    "test:api": "npx cypress run --spec \"src/e2e/\" --headless"
 
   },
   "author": "Ozan Ilhan",
