--- a/package.json
+++ b/package.json
@@ -7,7 +7,6 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "lint": "eslint .",
     "test:api": "npx cypress run --spec \"src/e2e/\" --headless"
-
   },
   "author": "Ozan Ilhan",
   "license": "ISC",
@@ -20,6 +19,7 @@
     "eslint-plugin-import": "^2.27.5",
     "eslint-plugin-n": "^15.6.1",
     "eslint-plugin-promise": "^6.1.1",
+    "ts-loader": "^9.4.2",
     "typescript": "^4.9.5"
   },
   "dependencies": {
