--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,7 +8,11 @@
       "jsx": "react",
       "allowJs": true,
       "moduleResolution": "node",
+      "strictNullChecks": true,
+      "resolveJsonModule": true,
+      "esModuleInterop": true,
       "types": ["cypress", "node"]
     },
-    "include": ["./src/**/*"]
+    "include": ["./src/**/*"],
+    "exclude": [ "cypress.config.ts"]
   }
